objects/NDOC__Static_Resource_Registry__mdt.object
<CustomObject>
    <description>The static resource registry stores metadata records which override behavior within Document Manager.</description>
    <fields>
        <fullName>NDOC__Folder_Location__c</fullName>
        <description>The developer populates this required field with the location of the static resource.</description>
        <label>Folder Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Active_V2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system populates this required checkbox to indicate if the static resource is active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- The system populates this required checkbox to indicate if the static resource is active. Replcaed by Is_Active_V2__c</description>
        <label>-D Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Order_of_Execution__c</fullName>
        <description>The developer populates this required field with the order of execution of the static resource.</description>
        <label>Order of Execution</label>
        <precision>15</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDOC__Permission_Set__c</fullName>
        <description>The developer populates this optional field with the permission set for the static resource. If there is no permission set specified, the static resource is available for all users.</description>
        <label>Permission Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Relative_Path__c</fullName>
        <description>The developer populates this required field with the relative path from a folder to the static resource.</description>
        <label>Relative Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__sObject_Type__c</fullName>
        <description>The developer populates this optional field with the sObject type(s) where the static resource appears. If there is no sObject type specified, the static resource is available across Document Manager.</description>
        <label>sObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Static Resource Registry</label>
    <pluralLabel>Static Resource Registries</pluralLabel>
</CustomObject>